--- a/LoopBack/BackendInmobiliaria/package.json
+++ b/LoopBack/BackendInmobiliaria/package.json
@@ -54,9 +54,8 @@
     "@loopback/repository": "^5.0.0",
     "@loopback/rest": "^12.0.0",
     "@loopback/rest-explorer": "^5.0.0",
-    "@loopback/service-proxy": "^5.0.0",
-    "loopback-connector-mongodb": "^5.6.0",
-    "tslib": "^2.0.0"
+    "@loopback/service-proxy": "^5.0.4",
+    "loopback-connector-mongodb": "^5.6.0"
   },
   "devDependencies": {
     "@loopback/build": "^9.0.0",
@@ -65,6 +64,7 @@
     "@types/node": "^12.20.50",
     "eslint": "^8.14.0",
     "source-map-support": "^0.5.21",
+    "tslib": "^2.4.0",
     "typescript": "~4.6.4"
   }
 }
