--- a/LoopBack/BackendInmobiliaria/tsconfig.json
+++ b/LoopBack/BackendInmobiliaria/tsconfig.json
@@ -3,7 +3,9 @@
   "extends": "@loopback/build/config/tsconfig.common.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "importHelpers": true,
+    "target": "es6"
   },
   "include": ["src"]
 }
